[workspace]
members = ["procgen_peg_in_hole"]
resolver = "2"

[workspace.package]
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
categories = ["science::robotics", "simulation"]
description = "Procedural generation pipelines in Blender"
edition = "2021"
keywords = ["robotics", "simulation"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndrejOrsula/blr_procgen"
rust-version = "1.74"
version = "0.1.0"
publish = false

[workspace.dependencies]
blr = { version = "0.1" }
pyo3 = { version = "0.20", features = ["abi3-py310", "auto-initialize"] }
